<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/black"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".HomeActivity">

    <Button
            android:id="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/open_setting_activity"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/open_sample_data_activity"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/open_data_screen"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"/>


</LinearLayout>