<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context=".SettingActivity">

    <TextView
            android:id="@+id/tvSelectLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_language"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSelectLanguage">

        <LinearLayout
                android:id="@+id/btnEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/black"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


            <TextView
                    android:id="@+id/tvEnglish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/english"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="normal"/>

        </LinearLayout>


        <LinearLayout
                android:id="@+id/btnSpanish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


            <TextView
                    android:id="@+id/tvSpanish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/spanish"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/btnHindi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


            <TextView
                    android:id="@+id/tvHindi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/hindi"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="normal"/>

        </LinearLayout>

        <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:text="@string/change_language"/>


    </LinearLayout>

</LinearLayout>